[gd_scene load_steps=28 format=3 uid="uid://dl6th05wrg2ac"]

[ext_resource type="Theme" uid="uid://byjjitw1nl3mo" path="res://theme/base_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://dnvefvofybb3a" path="res://scripts/card_detail.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://b8tee5cidprli" path="res://scenes/card.tscn" id="3"]
[ext_resource type="Shader" uid="uid://xxn1vfn5jas6" path="res://shader/dissolve.gdshader" id="4"]
[ext_resource type="Texture2D" uid="uid://d0eswjpmr8815" path="res://shader/enchanted.png" id="5"]
[ext_resource type="Script" uid="uid://cqjjrfkbkygfc" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="6"]
[ext_resource type="Script" uid="uid://bvk1kngo26t8i" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="7"]
[ext_resource type="Shader" uid="uid://b8ij1rimj4b61" path="res://shader/god_ray.gdshader" id="8"]

[sub_resource type="Shader" id="Shader_qa52t"]
code = "shader_type canvas_item;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;
uniform float lod: hint_range(0.0, 5) = 0.0;
uniform float alpha: hint_range(0.0, 1.0) = 1.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	color.rgb = color.rgb * 0.4;
	color.a = alpha;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h2ymi"]
shader = SubResource("Shader_qa52t")
shader_parameter/lod = 3.0
shader_parameter/alpha = 0.0

[sub_resource type="Shader" id="Shader_l4vf4"]
code = "shader_type canvas_item;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;
uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	//vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	//color.rgb = color.rgb * 0.7;
	//COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ihjph"]
shader = SubResource("Shader_l4vf4")
shader_parameter/lod = 3.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5aig4"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_m1d40"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_5aig4")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a81mw"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_m1d40")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("5")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.917647, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0117647, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = false
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eyrou"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_16bs5"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_eyrou")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jbwdr"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_16bs5")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("5")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.917647, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0117647, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = false
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ggsqr"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3o5pp"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_ggsqr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nfy2a"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_3o5pp")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("5")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.917647, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0117647, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = false
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5rb8h"]
resource_local_to_scene = true
seed = 9
frequency = 0.0013
offset = Vector3(60, -140, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_djo5r"]
resource_local_to_scene = true
invert = true
noise = SubResource("FastNoiseLite_5rb8h")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jd8n0"]
resource_local_to_scene = true
shader = ExtResource("4")
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_djo5r")
shader_parameter/dissolve_value = 1.0
shader_parameter/enchant = ExtResource("5")
shader_parameter/burn_size = 0.11
shader_parameter/burn_color = Color(0.988235, 0.615686, 0.0431373, 1)
shader_parameter/burn_color2 = Color(0.858824, 0.25098, 0.0901961, 1)
shader_parameter/shiny = false
shader_parameter/freeze_progress = 0.0
shader_parameter/randomizer = 3.14
shader_parameter/enable_burn = true
shader_parameter/saturation = false
shader_parameter/enrich = 1.0
shader_parameter/rainbow = false

[sub_resource type="Resource" id="Resource_8sd8o"]
script = ExtResource("7")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_5xp2m"]
script = ExtResource("7")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3ybt"]
shader = ExtResource("8")
shader_parameter/angle = -0.1
shader_parameter/position = -0.1
shader_parameter/spread = 0.475
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 1.0
shader_parameter/edge_fade = 0.25
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[node name="CardDetail" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_h2ymi")
anchor_right = 0.999479
anchor_bottom = 0.997222
theme = ExtResource("1")
color = Color(1, 1, 1, 0)
script = ExtResource("2")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ihjph")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400209
anchor_top = 0.118849
anchor_right = 0.837937
anchor_bottom = 0.820799
mouse_filter = 2
color = Color(0.0431373, 0.0431373, 0.0431373, 0.454902)
metadata/_edit_use_anchors_ = true

[node name="Template" type="Label" parent="."]
custom_minimum_size = Vector2(714, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44346
anchor_top = 0.12442
anchor_right = 0.842626
anchor_bottom = 0.803157
offset_left = -39.9993
offset_top = -4.00032
offset_right = -39.9993
offset_bottom = -4.00031
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
autowrap_mode = 2

[node name="TemplateEN" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(714, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400208
anchor_top = 0.0752089
anchor_right = 0.993226
anchor_bottom = 0.883937
offset_bottom = 6.10352e-05
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Welcome to the Demo version of Trizon!
This is a roguelike deck-building card game. Choose from three different cards to build a unique deck and see how far you can go!

At the start of each game and after winning a battle, you will enter a three-card choice interface. Add a card to your deck or skip (both will consume a card reward chance) to strengthen your deck. Right-click to view card effects.

Cards are divided into spell cards and creature cards. Spell cards only have a cost in the top left corner, while creature cards also have attack power in the bottom left corner and health in the bottom right corner. Cards with a cost of 0 can be played directly-just drag them into the grid. Cards with a cost greater than 0 can have their cost reduced by sacrificing friendly creatures on the field-just drag them onto the creatures in play. One life for one cost reduction.

At the end of each turn, your creatures will attack the cards directly opposite them. Then your enemies do the same thing, or directly attack you if they have nothing to attack. Defeat all the opponent's cards on the field to move to the next level. Good luck!"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="RelatedCard" parent="." instance=ExtResource("3")]
material = SubResource("ShaderMaterial_a81mw")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.874935
anchor_top = 0.155989
anchor_right = 0.964935
anchor_bottom = 0.379989
offset_right = 0.0900269
offset_bottom = 1.15204
movable = false

[node name="RelatedCard2" parent="." instance=ExtResource("3")]
material = SubResource("ShaderMaterial_jbwdr")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.874935
anchor_top = 0.155989
anchor_right = 0.964935
anchor_bottom = 0.379989
offset_top = 274.0
offset_right = 0.0900879
offset_bottom = 275.152
movable = false

[node name="RelatedCard3" parent="." instance=ExtResource("3")]
material = SubResource("ShaderMaterial_nfy2a")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.874935
anchor_top = 0.155989
anchor_right = 0.964935
anchor_bottom = 0.379989
offset_top = 549.0
offset_right = 0.0900879
offset_bottom = 550.152
movable = false

[node name="Card" parent="." instance=ExtResource("3")]
material = SubResource("ShaderMaterial_jd8n0")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132569
anchor_top = 0.171773
anchor_right = 0.357688
anchor_bottom = 0.734449
offset_left = 129.6
offset_top = 181.8
offset_right = -129.602
offset_bottom = -181.801
scale = Vector2(2.5, 2.5)
mouse_filter = 2
movable = false
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.412715
anchor_top = 0.133705
anchor_right = 0.833768
anchor_bottom = 0.906221
script = ExtResource("6")
wheel_scroll_damper = SubResource("Resource_8sd8o")
dragging_scroll_damper = SubResource("Resource_5xp2m")
hide_scrollbar_over_time = true
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="HFlowContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(714, 724)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 20

[node name="archetype" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 816.0
offset_right = 768.0
offset_bottom = 1072.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="GodRay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_h3ybt")
layout_mode = 0
offset_right = 1400.0
offset_bottom = 880.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="ScrollContainer" to="." method="_on_scroll_container_gui_input"]
